# stereo_calib_opencv

./: CMakeLists.txt  readme.md
data/: file_left.txt  file_right.txt
examples/: gen_sparities.cpp  stereo_calib.cpp
include/: stereo_match.h
scripts/gen_file_list/: gen_file_list.py
src/: stereo_match.cpp
